--- a/pi-rgb-ui/.eslintrc
+++ b/pi-rgb-ui/.eslintrc
@@ -11,7 +11,8 @@
         "jsx-a11y/anchor-is-valid": "off",
         "react/prop-types": "off" ,
         "quotes": ["error", "double"],
-        "no-trailing-spaces": "off"
+        "no-trailing-spaces": "off",
+        "import/no-extraneous-dependencies": "off"
     },
     "env": {
         "browser": true,
