Updated jsdoc stuff

--- a/pi-rgb-ui/documentation/config.json
+++ b/pi-rgb-ui/documentation/config.json
@@ -15,8 +15,9 @@
         "monospaceLinks": false,
         "default": {
             "staticFiles": {
-                "paths": ["./documentation/jsdoc-source/images"]
-            }
+                "paths": ["./documentation/images"]
+            },
+            "useLongnameInNav": true
         }
     }
 }
