--- a/pi-rgb-ui/package.json
+++ b/pi-rgb-ui/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
     "react": "^16.2.0",
+    "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
