Updated react/jsx-boolean-value rule

--- a/pi-rgb-ui/.eslintrc
+++ b/pi-rgb-ui/.eslintrc
@@ -13,7 +13,8 @@
         "linebreak-style": "off",
         "no-underscore-dangle": "off",
         "class-methods-use-this": "off",
-        "no-plusplus": "off"
+        "no-plusplus": "off",
+        "react/jsx-boolean-value": ["error","always"]
     },
     "env": {
         "browser": true,
