--- a/pi-rgb-ui/package.json
+++ b/pi-rgb-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "flux": "^3.1.3",
     "react": "^16.2.0",
     "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
@@ -14,7 +15,7 @@
     "dev": "npm-run-all -p watch-css start",
     "lint": "eslint src",
     "lint-fix": "eslint --fix src",
-    "esw": "esw --watch",
+    "lint-watch": "esw --watch",
     "watch-css": "npm run build-css && node-sass-chokidar src/Styles/Sass -o src/Styles/CSS --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
