--- a/pi-rgb-ui/package.json
+++ b/pi-rgb-ui/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/Styles/Sass -o src/Styles/CSS",
-    "build-docs": "jsdoc src -r -c ./documentation/config.json -d ./documentation/docs -R ./README.md",
+    "build-docs": "jsdoc src -r -c ./documentation/config.json -t ./node_modules/ink-docstrap/template -d ./documentation/docs -R ./README.md -u ./documentation/info",
     "dev": "npm-run-all -p watch-css start",
     "lint": "eslint src",
     "lint-fix": "eslint --fix src",
@@ -31,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
     "eslint-watch": "^3.1.3",
+    "ink-docstrap": "^1.3.2",
     "jest-enzyme": "^4.0.2",
     "jsdoc": "^3.5.5",
     "node-sass-chokidar": "0.0.3",
