--- a/pi-rgb-ui/package.json
+++ b/pi-rgb-ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "flux": "^3.1.3",
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
@@ -12,7 +13,6 @@
   "scripts": {
     "build-css": "node-sass-chokidar src/Styles/Sass -o src/Styles/CSS",
     "build-docs": "jsdoc src -r -c ./documentation/config.json -t ./node_modules/ink-docstrap/template -d ./documentation/docs -R ./README.md",
-    "dev": "npm-run-all -p watch-css start",
     "lint": "eslint src",
     "lint-fix": "eslint --fix src",
     "lint-watch": "esw --watch src",
@@ -34,7 +34,6 @@
     "ink-docstrap": "^1.3.2",
     "jest-enzyme": "^4.0.2",
     "jsdoc": "^3.5.5",
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.1.1"
+    "node-sass-chokidar": "0.0.3"
   }
 }
