Finished up the basic UI stuff. Individual LEDs color's are able to be changed

--- a/pi-rgb-ui/.eslintrc
+++ b/pi-rgb-ui/.eslintrc
@@ -15,7 +15,8 @@
         "class-methods-use-this": "off",
         "no-plusplus": "off",
         "react/jsx-boolean-value": ["error","always"],
-        "react/jsx-indent-props": "off"
+        "react/jsx-indent-props": "off",
+        "react/forbid-prop-types": "off"
     },
     "env": {
         "browser": true,
