--- a/pi-rgb-ui/package.json
+++ b/pi-rgb-ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "flux": "^3.1.3",
     "material-ui": "^0.20.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
